--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     </div>
                 </figure>
                 <figure>
-                    <img class="imgPopular" src="./assets/img/hebergements/popular2.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
+                    <img class="imgPopular" src="./assets/img/hebergements/popular2.jpg"
+                        alt="Au coeur de l'eau Chambres d'hôtes">
                     <div class="wrapperFig">
                         <figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
                         <p>Nuit à partir de 71€</p>
@@ -100,7 +101,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star disabled"></i>
                         </div>
                     </div>
                 </figure>
@@ -114,10 +115,10 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star disabled"></i>
                         </div>
                     </div>
-                </figure> 
+                </figure>
             </div>
         </section>
         <section id="activitySection">
@@ -128,6 +129,3 @@
 </body>
 
 </html>
-<!--
-Tester W3C HTML & CSS
--->
