header terminé taille 50%

--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="./assets/css/mobile.css">
     <title>Reservia</title>
 </head>
 
 <body>
-    <p>test de font</p>
-    <i class="fas fa-map-marker-alt"></i>
-    <i class="fas fa-search"></i>
-    <i class="fas fa-money-bill-wave"></i>
-    <i class="fas fa-child"></i>
-    <i class="fas fa-heart"></i>
-    <i class="fas fa-dog"></i>
-    <i class="fas fa-info"></i>
-    <i class="fas fa-chart-line"></i>
-    <i class="fas fa-star"></i>
+    <header>
+        <nav>
+            <ul>
+                <li class="navUn"><a href="#"><img src="./assets/img/logo/Reservia.svg" alt="Logo Reservia"></a></li>
+                <li class="navDeux"><a href="#">S'inscrire</a></li>
+                <li class="navTrois"><a href="#hebergements">Hébergements</a></li>
+                <li class="navQuatre"><a href="#activités">Activités</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
