--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="headerSection">
         <nav>
             <ul>
                 <li class="navUn"><a href="#"><img src="./assets/img/logo/Reservia.svg" alt="Logo Reservia"></a></li>
@@ -23,6 +23,57 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section id="searchSection">
+            <header>
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
+            </header>
+            <form id="searchBar">
+                <div id="borderSearchBar">
+                    <div id="mapButton">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <input type="search" id="maRecherche" name="q" placeholder="Marseille, France"
+                        aria-label="Rechercher des logements sur le site">
+                    <div id="searchButton">
+                        <i class="fas fa-search"></i>
+                    </div>
+                </div>
+            </form>
+            <div id="containerFilters">
+                <ul id="categoryFilters">
+                    <li id="filterTitle">Filtres</li>
+                    <li><a href="#">
+                            <div class="wrapperIcone"><i class="fas fa-money-bill-wave"></i></div>
+                            <div class="wrapperFiltre">Economique</div>
+                        </a></li>
+                    <li><a href="#">
+                            <div class="wrapperIcone"><i class="fas fa-child"></i></div>
+                            <div class="wrapperFiltre">Familial</div>
+                        </a></li>
+                    <li><a href="#">
+                            <div class="wrapperIcone"><i class="fas fa-heart"></i></div>
+                            <div class="wrapperFiltre">Romantique</div>
+                        </a></li>
+                    <li><a href="#">
+                            <div class="wrapperIcone"><i class="fas fa-dog"></i></div>
+                            <div class="wrapperFiltre">Animaux autorisés</div>
+                        </a></li>
+                </ul>
+            </div>
+            <div id="containerInfo">
+                <div id="wrapperInfo"><i class="fas fa-info"></i></div>
+                <aside id="asideFilter">Plus de 500 logements sont disponibles dans cette ville</aside>
+            </div>
+        </section>
+        <section id="popularSection">
+            <header>
+                <h2>Les plus populaires</h2>
+                <i class="fas fa-chart-line"></i>
+            </header>
+        </section>
+    </main>
 </body>
 
 </html>
