--- a/index.html
+++ b/index.html
@@ -72,6 +72,56 @@
                 <h2>Les plus populaires</h2>
                 <i class="fas fa-chart-line"></i>
             </header>
+            <div id="figurePopular">
+                <figure>
+                    <img src="./assets/img/hebergements/4_small/popular1.jpg" alt="Hôtel Le soleil du matin">
+                    <div class="wrapperTotal">
+                        <div class="wrapperFigureInfo">
+                            <figcaption>Hôtel Le soleil du matin</figcaption>
+                            <p>Nuit à partir de 128€</p>
+                        </div>
+                        <div class="starPopular">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                </figure>
+                <figure>
+                    <img src="./assets/img/hebergements/4_small/popular2.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
+                    <div class="wrapperTotal">
+                        <div class="wrapperFigureInfo">
+                    <figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
+                    <p>Nuit à partir de 71€</p>
+                        </div>
+                        <div class="starPopular">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star disabled"></i>
+                        </div>
+                    </div> 
+                </figure>
+                <figure>
+                    <img src="./assets/img/hebergements/4_small/popular3.jpg" alt="Hôtel Tout bleu et Blanc">
+                    <div class="wrapperTotal">
+                        <div class="wrapperFigureInfo">
+                    <figcaption>Hôtel Tout bleu et Blanc</figcaption>
+                    <p>Nuit à partir de 68€</p>
+                        </div>
+                        <div class="starPopular">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star disabled"></i>
+                        </div>
+                    </div> 
+                </figure>
+            </div>
         </section>
     </main>
 </body>
