header les plus populaires ok mobile pc

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div id="mapButton">
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
-                    <input type="search" id="maRecherche" name="q" placeholder="Marseille, France"
+                    <input type="text" id="maRecherche" name="q" placeholder="Marseille, France"
                         aria-label="Rechercher des logements sur le site">
                     <div id="searchButton">
                         <i class="fas fa-search"></i>
