activitySection Mobile ok

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="navUn"><a href="#"><img src="./assets/img/logo/Reservia.svg" alt="Logo Reservia"></a></li>
                 <li class="navDeux"><a href="#">S'inscrire</a></li>
                 <li class="navTrois"><a href="#hebergements">Hébergements</a></li>
-                <li class="navQuatre"><a href="#activités">Activités</a></li>
+                <li class="navQuatre"><a href="#activites">Activités</a></li>
             </ul>
         </nav>
     </header>
@@ -141,8 +141,8 @@
                     <figure>
                         <img src="./assets/img/hebergements/4_small/hosting1.jpg" alt="Auberge la Cannebière">
                         <figcaption>
-                                <span>Auberge la Cannebière</span>
-                                <p>Nuit à partir de 25€</p>
+                            <span>Auberge la Cannebière</span>
+                            <p>Nuit à partir de 25€</p>
                             <div class="starPopular">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -157,8 +157,8 @@
                     <figure>
                         <img src="./assets/img/hebergements/4_small/hosting2.jpg" alt="Auberge la Cannebière">
                         <figcaption>
-                                <span>Hôtel du port</span>
-                                <p>Nuit à partir de 52€</p>
+                            <span>Hôtel du port</span>
+                            <p>Nuit à partir de 52€</p>
                             <div class="starPopular">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -173,8 +173,8 @@
                     <figure>
                         <img src="./assets/img/hebergements/4_small/hosting3.jpg" alt="Auberge la Cannebière">
                         <figcaption>
-                                <span>Hôtel Les mouettes</span>
-                                <p>Nuit à partir de 76€</p>
+                            <span>Hôtel Les mouettes</span>
+                            <p>Nuit à partir de 76€</p>
                             <div class="starPopular">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -189,8 +189,8 @@
                     <figure>
                         <img src="./assets/img/hebergements/4_small/hosting4.jpg" alt="Auberge la Cannebière">
                         <figcaption>
-                                <span>Hôtel de la mer</span>
-                                <p>Nuit à partir de 46€</p>
+                            <span>Hôtel de la mer</span>
+                            <p>Nuit à partir de 46€</p>
                             <div class="starPopular">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -205,8 +205,8 @@
                     <figure>
                         <img src="./assets/img/hebergements/4_small/hosting5.jpg" alt="Auberge la Cannebière">
                         <figcaption>
-                                <span>Auberge Le Panier</span>
-                                <p>Nuit à partir de 23€</p>
+                            <span>Auberge Le Panier</span>
+                            <p>Nuit à partir de 23€</p>
                             <div class="starPopular">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -221,8 +221,8 @@
                     <figure>
                         <img src="./assets/img/hebergements/4_small/hosting6.jpg" alt="Auberge la Cannebière">
                         <figcaption>
-                                <span>Hôtel chez Amina</span>
-                                <p>Nuit à partir de 96€</p>
+                            <span>Hôtel chez Amina</span>
+                            <p>Nuit à partir de 96€</p>
                             <div class="starPopular">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -235,6 +235,61 @@
                 </a>
             </div>
             <p>Afficher plus</p>
+        </section>
+        <section id="activitySection">
+            <header>
+                <h2 id="activites">Activités à Marseille</h2>
+            </header>
+            <div id="figureActivity">
+                <a href="#">
+                    <figure>
+                        <img src="./assets/img/activites/4_small/activity1.jpg" alt="Vieux port">
+                        <figcaption>
+                            <span>Vieux port</span>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="./assets/img/activites/4_small/activity2.jpg" alt="Fort de Pomègues">
+                        <figcaption>
+                            <span>Fort de Pomègues</span>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="./assets/img/activites/4_small/activity3.jpg" alt="Iles du Frioul">
+                        <figcaption>
+                            <span>Îles du Frioul</span>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="./assets/img/activites/4_small/activity4.jpg" alt="Parc National des Calanques">
+                        <figcaption>
+                            <span>Parc National des Calanques</span>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="./assets/img/activites/4_small/activity5.jpg" alt="Notre-Dame-de-la-Garde">
+                        <figcaption>
+                            <span>Notre-Dame-de-la-Garde</span>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="./assets/img/activites/4_small/activity6.jpg" alt="Parc Longchamp">
+                        <figcaption>
+                            <span>Parc Longchamp</span>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
         </section>
     </main>
 </body>
