footer Mobile ok html & css validator ok

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="./assets/img/hebergements/4_small/hosting2.jpg" alt="Auberge la Cannebière">
+                        <img src="./assets/img/hebergements/4_small/hosting2.jpg" alt="Hôtel du port">
                         <figcaption>
                             <span>Hôtel du port</span>
                             <p>Nuit à partir de 52€</p>
@@ -171,7 +171,7 @@
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="./assets/img/hebergements/4_small/hosting3.jpg" alt="Auberge la Cannebière">
+                        <img src="./assets/img/hebergements/4_small/hosting3.jpg" alt="Hôtel Les mouettes">
                         <figcaption>
                             <span>Hôtel Les mouettes</span>
                             <p>Nuit à partir de 76€</p>
@@ -187,7 +187,7 @@
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="./assets/img/hebergements/4_small/hosting4.jpg" alt="Auberge la Cannebière">
+                        <img src="./assets/img/hebergements/4_small/hosting4.jpg" alt="Hôtel de la mer">
                         <figcaption>
                             <span>Hôtel de la mer</span>
                             <p>Nuit à partir de 46€</p>
@@ -203,7 +203,7 @@
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="./assets/img/hebergements/4_small/hosting5.jpg" alt="Auberge la Cannebière">
+                        <img src="./assets/img/hebergements/4_small/hosting5.jpg" alt="Auberge Le Panier">
                         <figcaption>
                             <span>Auberge Le Panier</span>
                             <p>Nuit à partir de 23€</p>
@@ -219,7 +219,7 @@
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="./assets/img/hebergements/4_small/hosting6.jpg" alt="Auberge la Cannebière">
+                        <img src="./assets/img/hebergements/4_small/hosting6.jpg" alt="Hôtel chez Amina">
                         <figcaption>
                             <span>Hôtel chez Amina</span>
                             <p>Nuit à partir de 96€</p>
@@ -292,6 +292,32 @@
             </div>
         </section>
     </main>
+    <footer id="footerSection">
+        <nav>
+            <div>
+                <h3>A propos</h3>
+                <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales de vente</a></li>
+                    <li><a href="#">Données de confidentialités</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Nos hébergements</h3>
+                <ul>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Assistance</h3>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
+            </div>
+        </nav>
+    </footer>
 </body>
 
 </html>
