adaptation Desktop et création div hostingAndPopular ok finition à faire sur les tailles

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <aside id="asideFilter">Plus de 500 logements sont disponibles dans cette ville</aside>
             </div>
         </section>
+        <div id="hostingAndPopular">
         <aside id="popularSection">
             <header>
                 <h2>Les plus populaires</h2>
@@ -237,6 +238,7 @@
             </div>
             <p>Afficher plus</p>
         </section>
+    </div>
         <section id="activitySection">
             <header>
                 <h2 id="activites">Activités à Marseille</h2>
