--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <h2 id="activites">Activités à Marseille</h2>
             </header>
             <div id="figureActivity">
-                <a href="#">
+                <a id ="vieuxPort" href="#">
                     <figure>
                         <img src="./assets/img/activites/4_small/activity1.jpg" alt="Vieux port">
                         <figcaption>
@@ -252,7 +252,8 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#">
+                <div id="wrapperPomeguesFrioul">
+                <a id ="fortPomegues" href="#">
                     <figure>
                         <img src="./assets/img/activites/4_small/activity2.jpg" alt="Fort de Pomègues">
                         <figcaption>
@@ -260,7 +261,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#">
+                <a id="ilesFrioul" href="#">
                     <figure>
                         <img src="./assets/img/activites/4_small/activity3.jpg" alt="Iles du Frioul">
                         <figcaption>
@@ -268,7 +269,8 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#">
+                </div>
+                <a id="parcNational" href="#">
                     <figure>
                         <img src="./assets/img/activites/4_small/activity4.jpg" alt="Parc National des Calanques">
                         <figcaption>
@@ -276,7 +278,8 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#">
+                <div id="wrapperDameLongchamp">
+                <a id="notreDame" href="#">
                     <figure>
                         <img src="./assets/img/activites/4_small/activity5.jpg" alt="Notre-Dame-de-la-Garde">
                         <figcaption>
@@ -284,7 +287,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="#">
+                <a id="parcLongchamp" href="#">
                     <figure>
                         <img src="./assets/img/activites/4_small/activity6.jpg" alt="Parc Longchamp">
                         <figcaption>
@@ -292,6 +295,7 @@
                         </figcaption>
                     </figure>
                 </a>
+                </div>
             </div>
         </section>
     </main>
